Swagger User for playlists CRUD
